--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://SzWielgosz.github.io/business-card",
   "private": true,
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
